--- a/src/css/components/work_in_progress.scss
+++ b/src/css/components/work_in_progress.scss
@@ -9,7 +9,7 @@
   justify-content: center;
   align-items: center;
 
-  > div {
+  >div {
     position: relative;
     padding: 12px 16px;
 
@@ -33,4 +33,8 @@
       top: 0;
     }
   }
+}
+
+@media screen and (max-width: $breakpoint-xs) {
+  .work-in-progress {}
 }
